[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conversor"
version = "1.0.0"
description = "Conversor de unidades - Engenharia Edition"
requires-python = ">=3.10"

[tool.setuptools]
py-modules = ["app", "conversor_monetario", "numeros", "temperatura"]