[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conversor"
version = "1.0.0"
description = "Conversor de unidades - Engenharia Edition"
requires-python = ">=3.10"
dependencies = [
    "Flask>=2.3.2",
    "Werkzeug>=2.3.0",
    "click>=8.1.7",
    "itsdangerous>=2.1.2",
    "Jinja2>=3.1.2",
    "MarkupSafe>=2.1.3",
    "blinker>=1.7.0"
]

[tool.setuptools]
py-modules = ["app", "conversor_monetario", "numeros", "temperatura"]